<resources>
    <string name="app_name">Tennis-app</string>

    <!-- GENERAL -->

    <!-- SPLASH SCREEN -->
    <string name="splash">Splash screen</string>

    <!-- USERS SCREEN -->
    <string name="users">Users</string>
    <string name="weather">Weather</string>

    <!-- CREATE PLAYER SCREEN -->
    <string name="add_player_first_name">First name</string>
    <string name="add_player_prefix">Prefix</string>
    <string name="add_player_last_name">Last name</string>
    <string name="add_player_single_rating">Single:</string>
    <string name="add_player_double_rating">Double:</string>
    <string name="add_player_id">id:</string>
    <string name="add_player_add">Add</string>

    <!-- PLAYER HOME -->
    <string name="single_rating">Singles: %.3f</string>
    <string name="double_rating">Doubles: %.3f</string>
    <string name="home_1">%s (%.3f)</string>
    <string name="home_2">%s (%.3f)</string>
    <string name="out_1">%s (%.3f)</string>
    <string name="out_2">%s (%.3f)</string>

    <!-- WEATHER -->
    <string name="location_id">Location id: %4d</string>
    <string name="main">Status: %s</string>
    <string name="description">Description: %s</string>
    <string name="temp">Temperature: %.1f C*</string>
    <string name="temp_min">Temperature: %.1f C*</string>
    <string name="temp_max">Temperature: %.1f C*</string>
    <string name="pressure">Pressure: %.1f hpa</string>
    <string name="humidity">Humidity: %.1f %s</string>
    <string name="speed">Wind speed: %.1f m/s</string>
    <string name="degrees">Wind direction: %.1f deg</string>
    <string name="country">Country: %s</string>
    <string name="sunrise">Sunrise: %s</string>
    <string name="sunset">Sunset: %s</string>
</resources>
